test/integration/tests/basic_computer_games/lem.output
                                  LEM
               CREATIVE COMPUTING  MORRISTOWN, NEW JERSEY

LUNAR LANDING SIMULATION

HAVE YOU FLOWN AN APOLLO/LEM MISSION BEFORE (YES OR NO)? NO

WHICH SYSTEM OF MEASUREMENT DO YOU PREFER?
 1=METRIC     0=ENGLISH
ENTER THE APPROPRIATE NUMBER? 0


  YOU ARE ON A LUNAR LANDING MISSION.  AS THE PILOT OF
THE LUNAR EXCURSION MODULE, YOU WILL BE EXPECTED TO
GIVE CERTAIN COMMANDS TO THE MODULE NAVIGATION SYSTEM.
THE ON-BOARD COMPUTER WILL GIVE A RUNNING ACCOUNT
OF INFORMATION NEEDED TO NAVIGATE THE SHIP.


THE ATTITUDE ANGLE CALLED FOR IS DESCRIBED AS FOLLOWS.
+ OR -180 DEGREES IS DIRECTLY AWAY FROM THE MOON
-90 DEGREES IS ON A TANGENT IN THE DIRECTION OF ORBIT
+90 DEGREES IS ON A TANGENT FROM THE DIRECTION OF ORBIT
0 (ZERO) DEGREES IS DIRECTLY TOWARD THE MOON

                              -180|+180
                                  ^
                           -90 < -+- > +90
                                  !
                                  0
                     <<<< DIRECTION OF ORBIT <<<<

                    ------ SURFACE OF MOON ------


ALL ANGLES BETWEEN -180 AND +180 DEGREES ARE ACCEPTED.

1 FUEL UNIT = 1 SEC. AT MAX THRUST
ANY DISCREPANCIES ARE ACCOUNTED FOR IN THE USE OF FUEL
FOR AN ATTITUDE CHANGE.
AVAILABLE ENGINE POWER: 0 (ZERO) AND ANY VALUE BETWEEN
10 AND 100 PERCENT.

NEGATIVE THRUST OR TIME IS PROHIBITED.


INPUT: TIME INTERVAL IN SECONDS ------ (T)
       PERCENTAGE OF THRUST ---------- (P)
       ATTITUDE ANGLE IN DEGREES ----- (A)

FOR EXAMPLE:
T,P,A? 10,65,-60
TO ABORT THE MISSION AT ANY TIME, ENTER 0,0,0

OUTPUT: TOTAL TIME IN ELAPSED SECONDS
        HEIGHT IN FEET
        DISTANCE FROM LANDING SITE IN FEET
        VERTICAL VELOCITY IN FEET/SECOND
        HORIZONTAL VELOCITY IN FEET/SECOND
        FUEL UNITS REMAINING

  0        364800      -19283024      0           5301.638   750 
T,P,A? 10,65,-60
  10       364944      -1.92335e+07   28.66155    5245.354   743.5 
T,P,A? 20,50,0
  30       366412      -1.9135e+07    118.2137    5244.074   733.5 
T,P,A? 
Error on line 585: No more input
